[tool.poetry]
name = "kinesis"
version = "0.1.0"
description = ""
authors = [ ]
maintainers = [ ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^41.0.5"
pymobiledevice3 = "^2.0.0"
eventlet = "^0.31.1"
python-socketio = "^5.4.0"

[tool.poetry.dev-dependencies]
flake8 = "~4.0.1"
isort = "^5.11.4"
pre-commit = "^3.0.1"
black = "^22.12.0"
autoflake = "^1.6.1"

[tool.isort]
profile = "black"
multi_line_output = 3